--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.1",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "socket.io": "^4.2.0"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon app.js",
